<resources>
    <string name="app_name" translatable="false">Just Java</string>
    <string name="hint_customer_name_edit_text">Customer name</string>
    <string name="heading_toppings_text_view">toppings</string>
    <string name="topping_whipped_cream_check_box">add whipped cream :P</string>
    <string name="topping_chocolate_check_box">add some chocolate ;)</string>
    <string name="heading_quantity_text_view">quantity of coffees</string>
    <string name="quantity_of_coffees_text_view" translatable="false">0</string>
    <string name="decrement_price_button" translatable="false">-</string>
    <string name="increment_price_button" translatable="false">+</string>
    <string name="send_an_order_button">send an order</string>
</resources>