<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/customer_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="customer_name"
            android:hint="@string/hint_customer_name_edit_text"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/heading_quantity_text_view"
            android:text="@string/heading_quantity_text_view"
            style="@style/HeaderTextStyle"
            app:layout_constraintTop_toBottomOf="@id/customer_name_edit_text" />

        <LinearLayout
            android:id="@+id/price_view_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/heading_quantity_text_view">

            <Button
                android:id="@+id/decrement_price_button"
                android:text="@string/decrement_price_button"
                android:layout_width="48dp"
                android:layout_height="48dp" />


            <TextView
                android:id="@+id/quantity_of_coffees_text_view"
                android:text="@string/quantity_of_coffees_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp" />

            <Button
                android:id="@+id/increment_price_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:text="@string/increment_price_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/heading_toppings_text_view"
            android:text="@string/heading_toppings_text_view"
            style="@style/HeaderTextStyle"
            app:layout_constraintTop_toBottomOf="@id/customer_name_edit_text" />

        <LinearLayout
            android:id="@+id/toppings_view_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/heading_toppings_text_view">

            <CheckBox
                android:id="@+id/topping_whipped_cream_check_box"
                android:text="@string/topping_whipped_cream_check_box"
                style="@style/ToppingsTextStyle" />

            <CheckBox
                android:id="@+id/topping_chocolate_check_box"
                android:text="@string/topping_chocolate_check_box"

                style="@style/ToppingsTextStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/send_an_order_button"
            android:text="@string/send_an_order_button"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/toppings_view_group" />

    </LinearLayout>
</ScrollView>